Add more contents and Japanese page.
Change-Id: Ib75c1b22cadf9c55bf557500e4e9be8c8020f037
Signed-off-by: Hiroshi Ito <hiroshi.ito@gs.com>

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Eclipse Collections - Feature rich, open source Java collections framework</title>
+    <title>Eclipse Collections - Happy development with the best Java collections framework ever. </title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -63,13 +63,24 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="#start">Download</a>
+                        <a href="#start">Get Started</a>
                     </li>
                     <li>
                         <a href="#concept">Concept</a>
                     </li>
                     <li>
+                        <a href="#history">History</a>
+                    </li>
+                    <li>
                         <a href="#contribute">Contribute</a>
+                    </li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
+                           aria-expanded="false">Language <span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="">English</a></li>
+                            <li><a href="ja/index.html">Japanese</a></li>
+                        </ul>
                     </li>
                 </ul>
             </div>
@@ -85,17 +96,17 @@
         <div class="container-fluid">
 
             <div class="row">
-                <div class="col-lg-12">
+                <div class="col-lg-push-2 col-lg-8">
                     <div class="intro-message">
                         <h1>Eclipse Collections</h1>
-                        <h3>A feature rich open source Java collections framework</h3>
-                        <br>
-                        <ul class="list-inline intro-social-buttons">
-                            <li>
-                                <a href="https://github.com/eclipse/eclipse-collections" class="btn btn-default btn-sm"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
-                            </li>
-                        </ul>
+                        <h3>- Happy development with the best Java collections framework ever -</h3>
                     </div>
+                </div>
+
+                <div class="col-lg-push-2 col-lg-2">
+                    <a href="https://projects.eclipse.org/projects/technology.collections">
+                        <img class="img-responsive" src="img/Egg-incubation.png" alt="Eclipse Incubation Egg">
+                    </a>
                 </div>
             </div>
 
@@ -116,10 +127,7 @@
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
                     <h2 class="section-heading">Get started with <br>Eclipse Collections</h2>
-                    <p class="lead">Eclipse Collections is a collections framework for Java.
-                        It has JDK-compatible List, Set and Map implementations with a rich API
-                        and set of utility classes that work with any JDK compatible Collections,
-                        Arrays, Maps or Strings. The iteration protocol was inspired by the Smalltalk collection framework.
+                    <p class="lead">You can easily get started with Eclipse Collections.
                         <br><br>Integrate it to your codebase with your favorite build tools!</p>
                 </div>
                 <div class="col-lg-7 col-sm-6">
@@ -168,7 +176,7 @@
         <!-- /.container -->
 
     </div>
-    <!-- /.content-section-a -->
+    <!-- Get Started -->
 
     <a name="concept"></a>
     <div class="content-section-b">
@@ -249,7 +257,7 @@
         <!-- /.container -->
 
     </div>
-    <!-- /.content-section-b -->
+    <!-- Rich and fluent API -->
 
     <div class="content-section-a">
 
@@ -358,7 +366,7 @@
         <!-- /.container -->
 
     </div>
-    <!-- /.content-section-a -->
+    <!-- Container Types -->
 
     <div class="content-section-b">
 
@@ -395,26 +403,104 @@
         <!-- /.container -->
 
     </div>
-    <!-- /.content-section-b -->
+    <!-- Memory footprint -->
 
-	<a  name="contribute"></a>
+    <a name="history"></a>
+    <div class="content-section-a">
+
+        <div class="container-fluid">
+
+            <h2 class="section-heading">History of Eclipse Collections</h2>
+            <p class="lead">
+                Eclipse Collections started off as an open source project on GitHub called
+                <a href="https://github.com/goldmansachs/gs-collections">GS Collections</a> in 2012.
+                <br><br>
+                GS Collections has been presented at number of
+                <a href="https://github.com/eclipse/eclipse-collections/wiki/Conference-talks-and-meetups">conferences</a>
+                including JVM Summit in 2012 and JavaOne in 2014.
+                A performance comparison between the parallel lazy implementations of Java 8, Scala and GS Collections was presented at
+                <a href="http://www.infoq.com/presentations/java-streams-scala-parallel-collections">QCon New York</a> in 2014.
+                <br><br>
+                There are <a href="https://github.com/eclipse/eclipse-collections/wiki/Articles">articles</a> on InfoQ.com
+                showing some of the capabilities of the collections framework through examples, and also interviews to the creator of GS Collections.
+                <br><br>
+                To maximize the best nature of open source project, GS Collections has been migrated to Eclipse Foundation, re-branded as Eclipse Collections in 2015.
+            </p>
+            <hr class="section-heading-spacer">
+
+        </div>
+        <!-- /.container -->
+
+    </div>
+    <!-- Introduction  -->
+
+    <a  name="contribute"></a>
+    <div class="content-footer">
+
+        <div class="container-fluid">
+
+            <div class="row">
+                <div class="col-lg-4 col-sm-4">
+                    <h3>Contribute</h3>
+                    <p class="regular">
+                        We welcome contributions to the Eclipse Collections project!!
+                        <br><br>
+                        Eclipse Collections Project Roadmap can be found <a href="https://github.com/eclipse/eclipse-collections/wiki/Roadmap">here</a>.
+                        <br><br>
+                        The Eclipse Collections project accepts contributions via pull requests in this GitHub.
+                        Please see <a href="https://github.com/eclipse/eclipse-collections/blob/master/CONTRIBUTING.md">How To Contribute</a> for more detail.
+                    </p>
+                </div>
+                <div class="col-lg-4 col-sm-4">
+                    <h3>Latest News</h3>
+                    <p class="regular">Eclipse Collections 7.0.0 released <a class="light">(Jan 20th 2016)</a></p>
+                    <p class="regular">Eclipse Collections was presented at
+                        <a href="http://www.java-users.jp/?page_id=2064#GH-4">
+                            JJUG CCC 2015 Fall
+                        </a>
+                        <a class="light">(Nov 28th 2015)</a>
+                    </p>
+                    <p class="regular">Eclipse Collections was presented at
+                        <a href="https://www.eclipsecon.org/europe2015/session/eclipse-collections-example">
+                            EclipseCon Europ 2015
+                        </a>
+                        <a class="light">(Nov 5th 2015)</a>
+                    </p>
+                    <p class="regular">Eclipse Collections was presented at
+                        <a href="https://events.rainfocus.com/oow15/catalog/oracle.jsp?event=javaone&search=CON1091&search.event=javaoneEvent&search.day=20151029">
+                            JavaOne 2015 San Francisco
+                        </a>
+                        <a class="light">(Oct 28th 2015)</a>
+                    </p>
+                </div>
+                <div class="col-lg-4 col-sm-4">
+                    <h3>Community Links</h3>
+                        <p class="regular">Eclipse PME: <a href="https://projects.eclipse.org/projects/technology.collections">eclipse project management infrastructure</a></p>
+                        <p class="regular">GitHub: <a href="https://github.com/eclipse/eclipse-collections">eclipse-collections</a></p>
+                        <p class="regular">Issues: <a href="https://github.com/eclipse/eclipse-collections/issues">GitHub issues</a></p>
+                        <p class="regular">Mailing lists: <a href="https://dev.eclipse.org/mailman/listinfo/collections-dev">collections-dev</a> mailing list</p>
+                        <p class="regular">Wiki: <a href="https://github.com/eclipse/eclipse-collections/wiki">GitHub wiki</a></p>
+                        <p class="regular">Forum: <a href="https://www.eclipse.org/forums/index.php?t=thread&amp;frm_id=329">Eclipse Collections Forum</a></p>
+                        <p class="regular">StackOverflow: tag with <a href="http://stackoverflow.com/questions/tagged/eclipse-collections">eclipse-collections</a></p>
+                </div>
+                <!-- /.col -->
+            </div>
+            <!-- /.row -->
+
+        </div>
+        <!-- /.container -->
+
+    </div>
+    <!-- Container Types -->
+
+
     <div class="banner">
 
         <div class="container-fluid">
 
             <div class="row">
-                <div class="col-lg-8">
-                    <h2>Contribute to Eclipse Collections:</h2>
-                </div>
-                <div class="col-lg-4">
-                    <ul class="list-inline banner-social-buttons">
-                        <li>
-                            <a href="https://github.com/eclipse/eclipse-collections" class="btn btn-default btn-sm"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
-                        </li>
-                        <li>
-                            <a href="https://projects.eclipse.org/projects/technology.collections" class="btn btn-default btn-sm"><i class="fa fa-home fa-fw"></i> <span class="network-name">Project Home</span></a>
-                        </li>
-                    </ul>
+                <div class="col-lg-12">
+                    <h3>- Happy development with the best Java collections framework ever -</h3>
                 </div>
             </div>
 
@@ -431,7 +517,7 @@
                 <div class="col-lg-12">
                     <ul class="list-inline">
                         <li>
-                            <p class="copyright text-muted small">Copyright &copy; 2015 The Eclipse Foundation. All Rights Reserved. </p>
+                            <p class="copyright text-muted small">Copyright &copy; 2016 The Eclipse Foundation. All Rights Reserved. </p>
                         </li>
                         <li class="footer-menu-divider">&sdot;</li>
                         <li>
