--- a/index.html
+++ b/index.html
@@ -127,8 +127,9 @@
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
                     <h2 class="section-heading">Get started with <br>Eclipse Collections</h2>
-                    <p class="lead">You can easily get started with Eclipse Collections.
-                        <br><br>Integrate it to your codebase with your favorite build tools!</p>
+                    <p class="lead">Eclipse Collections is the best Java collections framework ever
+                        that brings happiness to your Java development.
+                        <br><br>Integrate it to your codebase today with your favorite build tools!</p>
                 </div>
                 <div class="col-lg-7 col-sm-6">
                     <ul class="nav nav-tabs">
