--- a/ja/index.html
+++ b/ja/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Eclipse Collections - 今までにないJavaコレクションフレームワークで最高の開発体験を </title>
+    <title>Eclipse Collections - 最高のJavaコレクションフレームワークであなたの開発を幸せに </title>
 
     <!-- Bootstrap Core CSS -->
     <link href="../css/bootstrap.min.css" rel="stylesheet">
@@ -127,8 +127,9 @@
                 <hr class="section-heading-spacer">
                 <div class="clearfix"></div>
                 <h2 class="section-heading">Eclipse Collectionsを始めてみよう</h2>
-                <p class="lead">Eclipse Collectionsは簡単に使い始めることができます。
-                    <br><br>お好みのビルドツールを使ってあなたのJavaプロジェクトに導入してみてください！</p>
+                <p class="lead">Eclipse CollectionsはあなたのJava開発を幸せにする
+                    最高のJavaコレクションフレームワークです。
+                    <br><br>今すぐお好みのビルドツールを使ってあなたのJavaプロジェクトに導入してみてください！</p>
             </div>
             <div class="col-lg-7 col-sm-6">
                 <ul class="nav nav-tabs">
@@ -375,7 +376,7 @@
             <div class="col-lg-push-6 col-lg-6 col-sm-push-6 col-sm-6">
                 <hr class="section-heading-spacer">
                 <div class="clearfix"></div>
-                <h2 class="section-heading">メモリ効率の良いコレクションで、メモリ使用量削減</h2>
+                <h2 class="section-heading">メモリ効率の良いコレクションで、あなたのプロセスを軽量に</h2>
                 <p class="lead">Eclipse CollectionsはSet、Map、そして全てのプリミティブコレクションでメモリ効率の良い実装を提供します。 </p>
             </div>
             <div class="col-lg-pull-6 col-lg-6 col-sm-pull-6 col-sm-6">
