--- a/ja/index.html
+++ b/ja/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="jp">
+<html lang="en">
 
 <head>
 
@@ -19,7 +19,8 @@
 
     <!-- Custom Fonts -->
     <link href="../font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href="http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
+    <link href="http://fonts.googleapis.com/css?family=Roboto+Condensed:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
+    <link href="//fonts.googleapis.com/earlyaccess/notosansjapanese.css" rel="stylesheet" type="text/css">
 
     <!-- Google Code Prettify -->
     <link href="../google-code-prettify/sunburst.css" rel="stylesheet" type="text/css">
@@ -104,7 +105,7 @@
             <div class="col-lg-push-2 col-lg-8">
                 <div class="intro-message">
                     <a  name="start"></a><!--TODO: Bring it back to correct place once incubation logo is removed.-->
-                    <h1>Eclipse Collections</h1>
+                    <h1>Eclipse <span style="font-weight: 400">Collections</span></h1>
                     <h3>- More features, less waste  -</h3>
                 </div>
             </div>
